Updated contract; Deploy.ts needs debug.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-PRIVATE_KEY=your_deployer_private_key
-PRIVATE_KEY2=your_governor_private_key
-PRIVATE_KEY3=your_minter_private_key
+DEPLOYER_PRIVATE_KEY=your_deployer_private_key
+GOVERNOR_ADDRESS=your_governor_address
+MINTER_ADDRESS=your_minter_address
 ALCHEMY_API_KEY=your_Alchemy_API_key
+ALCHEMY_URL=https://eth-sepolia.g.alchemy.com/v2/
