--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.1.0"
+    "@openzeppelin/contracts": "^5.1.0",
+    "viem": "^2.21.55"
   }
 }
